--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -4,13 +4,17 @@ on:
   push:
     branches: [main]
     paths:
-      - "transaction-api/**"
       - ".github/workflows/**"
+      - "transaction-api/**"
+      - "regions-api/**"
+      - "mcc-api/**"
   pull_request:
     branches: [main]
     paths:
-      - "transaction-api/**"
       - ".github/workflows/**"
+      - "transaction-api/**"
+      - "regions-api/**"
+      - "mcc-api/**"
 
 jobs:
   test:
