--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -35,10 +35,27 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Running tests (mcc-api)
+      - name: ✅Running tests (mcc-api)
         working-directory: mcc-api
         run: |          
           pytest -v --tb=short || echo "mcc-api tests failed"
+
+      - name: 📦 Load all required dependencies (transaction-api)
+        working-directory: transaction-api
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+
+      - name: ✅ Running tests (transaction-api)
+        working-directory: transaction-api
+        run: |          
+          pytest -v --tb=short || echo "transaction-api tests failed"
+
+      - name: 📊 Run tests with coverage
+        working-directory: transaction-api
+        run: | 
+          pip install pytest-cov
+          pytest --cov=. --cov-report=term-missing
 
 #      - name: 📦 Install dependencies and run tests (transaction-api)
 #        working-directory: transaction-api
