feat: Adding adjusts

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -49,6 +49,8 @@ jobs:
       - name: ✅ Running tests (transaction-api)
         working-directory: transaction-api
         run: |          
+          PYTHONPATH=. pytest -v
+          PYTHONPATH=transaction-api pytest transaction-api/tests -v
           pytest -v --tb=short || echo "transaction-api tests failed"
 
       - name: 📊 Run tests with coverage
