--- a/transaction-api/requirements.txt
+++ b/transaction-api/requirements.txt
@@ -1,26 +1,45 @@
-fastapi
-sqlalchemy
-uvicorn
-pytest
-pytest-cov
-httpx
-hypothesis
+annotated-types==0.7.0
+anyio==4.9.0
+attrs==25.3.0
 blinker==1.6.3
+certifi==2025.6.15
 click==8.1.7
-Flask==3.0.0
-faker
-gevent
+coverage==7.9.1
+exceptiongroup==1.3.0
+faker==37.4.0
+fastapi==0.115.13
+flask==3.0.0
+gevent==24.2.1
 greenlet==3.0.0
+h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
+hypothesis==6.135.14
+idna==3.10
+importlib-metadata==8.7.0
+iniconfig==2.1.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.3
+packaging==25.0
+pluggy==1.6.0
+pydantic==2.11.7
+pydantic-core==2.33.2
+pygments==2.19.2
+pytest==8.4.1
+pytest-asyncio==1.0.0
+pytest-cov==6.2.1
 python-dotenv==1.0.0
-Werkzeug==3.0.0
+sniffio==1.3.1
+sortedcontainers==2.4.0
+sqlalchemy==2.0.41
+starlette==0.46.2
+tomli==2.2.1
+typing-extensions==4.14.0
+typing-inspection==0.4.1
+tzdata==2025.2
+uvicorn==0.34.3
+werkzeug==3.0.0
+zipp==3.23.0
 zope.event==5.0
 zope.interface==6.1
-
-pytest
-pytest-asyncio
-faker
-hypothesis
-httpx
